<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/full_activity"
    android:paddingRight="@dimen/full_activity"
    android:paddingTop="@dimen/full_activity"
    android:paddingBottom="@dimen/full_activity"
    android:weightSum="1"
    android:background="#fffff8e9"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    tools:context="com.project.sam.bargrocery.ShoppingList">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:text="@string/activity_shopping_list_promt"
        android:id="@+id/shoplistText"
        android:autoText="false"
        android:textColor="#ff0a85d8"
        android:textSize="@dimen/header"
        android:textStyle="bold"
        android:textAlignment="center"
        android:typeface="sans"
        android:padding="@dimen/full_activity"
        android:gravity="center"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit List"
        android:id="@+id/submitBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#fffdaa15"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textStyle="bold"
        android:typeface="sans"
        android:layout_marginTop="5dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/brandET"
        android:hint="@string/brand"
        android:background="#fff6ff9f"
        android:inputType="text"
        android:textColor="#ff000000"
        android:textSize="24dp"
        android:typeface="sans"
        android:layout_weight="2"
        android:padding="2dp"
        android:focusable="true"
        android:ems="4"
        android:editable="true"
        android:enabled="true"
        android:layout_alignTop="@+id/numET"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/numET" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/productET"
        android:background="#fff0fff1"
        android:hint="@string/product"
        android:inputType="text"
        android:typeface="sans"
        android:textColor="#ff000000"
        android:textSize="24dp"
        android:layout_weight="3"
        android:padding="2dp"
        android:ems="7"
        android:focusable="true"
        android:layout_toLeftOf="@+id/numET"
        android:layout_toRightOf="@+id/brandET"
        android:layout_toEndOf="@+id/brandET"
        android:layout_alignBottom="@+id/brandET"
        android:layout_below="@+id/shoplistText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/numET"
        android:background="#fff6ff9f"
        android:hint="@string/num"
        android:textColor="#ff000000"
        android:typeface="sans"
        android:textSize="24dp"
        android:layout_weight="1"
        android:padding="2dp"
        android:ems="2"
        android:focusable="true"
        android:layout_toLeftOf="@+id/addBtn"
        android:layout_toStartOf="@+id/addBtn"
        android:layout_alignBottom="@+id/addBtn"
        android:layout_below="@+id/shoplistText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/addBtn"
        android:background="#fffdaa15"
        android:textAlignment="center"
        android:textSize="20dp"
        android:typeface="sans"
        android:padding="2dp"
        android:onClick="addRowhandler"
        android:focusable="false"
        android:layout_below="@+id/shoplistText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/brandET"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/submitBtn" />


</RelativeLayout>